--- a/src/app/personas/personas.component.html
+++ b/src/app/personas/personas.component.html
@@ -1,6 +1,6 @@
 <div class="container shadow p-3 mb-5 bg-white rounded">
   <div class="d-flex mb-3 justify-content-end">
-    <button class="btn btn-primary" (click)="agregar()">+ Nueva Persona</button>
+    <button class="btn btn-primary" (click)="agregar()">+ Agregar</button>
   </div>
   <div class="table-responsive">
     <table class="table table-bordered table-hover">
